# Study_Cplusplus

./: .gitignore  README.txt
ATM/: ATM.sln
ATM/ATM/: ATM.vcxproj  ATM.vcxproj.filters  AppATM.cpp  AppATM.h  DBManager.cpp  DBManager.h  Record.cpp  Record.h  main.cpp
ATM/ATM/Debug/: ATM.exe.recipe  vc142.idb
ATM/ATM/Debug/ATM.tlog/: ATM.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ATM/ATM/Release/: ATM.exe.recipe
ATM/ATM/Release/ATM.tlog/: ATM.lastbuildstate  ATM.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ATM/Release/: ATM.iobj  ATM.ipdb
ATM_final/: ATM_final.sln
ATM_final/ATM_final/: ATM_final.vcxproj  ATM_final.vcxproj.filters  CAccount.cpp  CAccount.h  CAdmin.cpp  CAdmin.h  CApp.cpp  CApp.h  CAppATM.h  CAppATM_FrontPage.cpp  CAppATM_Service.cpp  CAppAdmin.cpp  CAppAdmin.h  CDBManager.cpp  CDBManager.h  CRecord.cpp  CRecord.h  main.cpp
ATM_final/ATM_final/Debug/: ATM_final.exe.recipe  vc142.idb
ATM_final/ATM_final/Debug/ATM_final.tlog/: ATM_final.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ATM_final/ATM_final/Release/: ATM_final.exe.recipe
ATM_final/ATM_final/Release/ATM_final.tlog/: ATM_final.lastbuildstate  ATM_final.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ATM_final/Release/: ATM_final.iobj  ATM_final.ipdb
ATM_without OOP/: ATM_without OOP.sln
ATM_without OOP/ATM_without OOP/: ATM_Data.txt  ATM_UI.cpp  ATM_UI.h  ATM_without OOP.vcxproj  ATM_without OOP.vcxproj.filters  DBManager.cpp  DBManager.h  Record.cpp  Record.h  main.cpp
ATM_without OOP/ATM_without OOP/Debug/: ATM_without OOP.exe.recipe  vc142.idb
ATM_without OOP/ATM_without OOP/Debug/ATM_without OOP.tlog/: ATM_without OOP.lastbuildstate  (+6 more)
ATM_without OOP/ATM_without OOP/Release/: ATM_without OOP.exe.recipe
ATM_without OOP/Release/: ATM_without OOP.iobj  ATM_without OOP.ipdb
BitString/: BitString.cpp  BitString.h
CMake/CMakeExternalLibs/: CMakeLists.txt
CMake/Dependencycmake/: CMakeLists.txt  Dependency.cmake
CMake/HelloCMake/: CMakeLists.txt
CMake/HelloCMake/src/: HelloCMake.cpp
ChzStack/: ChzResult.h  ChzStack.h  Source.c
TCP/: TCP_Client.cpp  TCP_Server.cpp
(+8 files in other folders)
